Docs: Updated documentation for the elements

--- a/anypoint-text-container.html
+++ b/anypoint-text-container.html
@@ -7,8 +7,33 @@ All rights reserved.
 <link rel="import" href="../anypoint-styles/typography.html">
 <link rel="import" href="../anypoint-styles/colors.html">
 <!--
+
 The `<anypoint-text-container>` is a container for a `label` and input text styled to match the
 Anypoint platform styling.
+
+### Styling
+
+`<anypoint-text-field>` provides the following custom properties and mixins for styling:
+Custom property | Description | Default
+----------------|-------------|----------
+`--anypoint-text-container` | Mixin applied to the input container | `{}`
+`--anypoint-text-container-disabled` | Mixin applied to the disabled container | `{}`
+`--anypoint-text-container-border` | Mixin applied to the border element on the left and right hand side of the input | ``
+`--anypoint-text-container-border-focused` | Mixin applied to the border element on the left and right hand side of the input | ``
+`--anypoint-text-container-border-color` | Color of the right and left border of the input | `--anypoint-color-aluminum4`
+`--anypoint-text-container-border-focused-color` | Color of the right and left border of the input when the input is focused | `--anypoint-color-steel2`
+`--anypoint-text-container-invalid-color,` | Error color | `--anypoint-color-danger`
+`--anypoint-text-container-label-color` | Color of the label | `--anypoint-color-aluminum5`
+`--anypoint-text-container-label` | Mixin applied to the label | `{}`
+`--anypoint-text-container-label-floating` | Mixin applied to the floating label | `{}`
+`--anypoint-text-container-label-focus` | Mixin applied to the label when focused | `{}`
+`--anypoint-text-container-focus-color` | Color applied to the label and input when focused | `--anypoint-color-aluminum5`
+`--anypoint-text-field-prefix` | Mixin applied to any prefix element added to the container | `{}`
+`--anypoint-text-field-suffix` | Mixin applied to any suffix element added to the container | `{}`
+`--anypoint-text-container-input-color` | Color of the input control | `--anypoint-color-steel5`
+`--anypoint-text-container-input` | Mixin applied to the input control | ``
+
+@demo demo/index.html
 -->
 <dom-module id="anypoint-text-container">
   <template>
@@ -47,11 +72,12 @@ Anypoint platform styling.
       transform-origin: center center;
       -webkit-transition: all .2s ease-out;
       transition: all .2s ease-out;
+      @apply(--anypoint-text-container-border);
     }
 
     .borderline.is-highlighted .unfocused-border {
-      background-color: var(--anypoint-text-container-border-focus-color, --anypoint-color-steel2);
-      @apply(--anypoint-text-container-border-focus);
+      background-color: var(--anypoint-text-container-border-focused-color, --anypoint-color-steel2);
+      @apply(--anypoint-text-container-border-focused);
     }
 
     .borderline.is-highlighted .unfocused-border.left {
