--- a/anypoint-text-textarea.html
+++ b/anypoint-text-textarea.html
@@ -10,22 +10,17 @@ All rights reserved.
 <link rel="import" href="anypoint-validation-result.html">
 
 <!--
-`<anypoint-text-field>` Text input styled for the Anypoint platform as a Polymer powered web component
+`<anypoint-text-field>` is a mu;lti line text input styled for the Anypoint platform
+as a Polymer powered web component
 
 ### Example
 ```
-<anypoint-text-field></anypoint-text-field>
+<anypoint-text-textarea></anypoint-text-textarea>
 ```
 
 ### Styling
-`<anypoint-text-field>` provides the following custom properties and mixins for styling:
+See `anypoint-text-container` for styling options.
 
-Custom property | Description | Default
-----------------|-------------|----------
-`--anypoint-text-field` | Mixin applied to the element | `{}`
-
-@group UI Elements
-@element anypoint-text-field
 @demo demo/index.html
 -->
 <dom-module id="anypoint-text-textarea">
