Update: Updated license information to match Anypoint licence

--- a/anypoint-text-container.html
+++ b/anypoint-text-container.html
@@ -1,5 +1,7 @@
 <!--
-Copyright (C) Mulesoft Inc.
+@license
+Copyright 2017 Mulesoft.
+
 All rights reserved.
 -->
 <link rel="import" href="../polymer/polymer.html">
