--- a/anypoint-validation-result.html
+++ b/anypoint-validation-result.html
@@ -30,6 +30,7 @@ Custom property | Description | Default
     <style>
     :host {
       display: block;
+      @apply(--anypoint-validation-result);
     }
 
     .container {
@@ -52,6 +53,7 @@ Custom property | Description | Default
       position: absolute;
       width: 0;
       z-index: -1;
+      @apply(--anypoint-validation-result-arrow);
     }
 
     .border {
